--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Pets</title>
 </head>
 <body>
-    
+<h1>I Love my Rabbits</h1>
+<h2>There names are Oreo and Shadow</h2>
+<h3>They love to eat mint leaves</h3>
 </body>
 </html>
